--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,13 @@ name: "GSEA"
 description: "The Grinnell Space Exploration Agency"
 url: "http://grinnellsea.github.io"
 
+paginate: 10
+paginate_path: "/blog/page:num/" 
+
 defaults:
     -
         scope:
             path: ""
         values:
             layout: default
+            excerpt_separator: <!--END_EXCERPT-->
