--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: "GSEA"
 description: "The Grinnell Space Exploration Agency"
-url: "https://grinnellsea.github.io"
+url: "https://grinnellsea.github.io/"
 
 paginate: 10
 paginate_path: "/blog/page:num/" 
