theming and manifest updates

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
 		}
 	],
 	"start_url": "/",
-	"display": "standalone",
+	"display": "browser",
 	"theme_color": "#dd0000",
 	"background_color": "#dd0000"
 }
