--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ url: "https://grinnellsea.github.io"
 
 paginate: 10
 paginate_path: "/blog/page:num/" 
-gems: [jekyll-paginate]
+gems: 
+    - jekyll-coffeescript
+    - jekyll-paginate
 
 defaults:
     -
